lcg-shop-frontend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lcg-shop
  labels:
    app.kubernetes.io/name: lcg-shop
