lcg-shop-frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lcg-shop
  namespace: lcg-shop
  labels:
    app: lcg-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lcg-shop
  template:
    metadata:
      labels:
        app: lcg-shop
    spec:
      containers:
        - name: lcg-shop
          image: botsystem13/lcg-shop:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
