lcg-shop-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lcg-shop
  namespace: lcg-shop
  labels:
    app: lcg-shop
spec:
  type: NodePort
  selector:
    app: lcg-shop
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30083
      protocol: TCP
